update API calls II